test/integration/bad/for_loops/stanc.expected
  $ ../../../../../install/default/bin/stanc assign_to_loop_var1.stan

Semantic error in 'assign_to_loop_var1.stan', line 5, columns 18-24:
   -------------------------------------------------
     3:      int vs[2];
     4:      int y;
     5:      for (v in vs) v = 3;
                           ^
     6:      return 0;
     7:    }
   -------------------------------------------------

Cannot assign to function argument or loop identifier 'v'.

  $ ../../../../../install/default/bin/stanc assign_to_loop_var2.stan

Semantic error in 'assign_to_loop_var2.stan', line 5, columns 18-24:
   -------------------------------------------------
     3:      int vs[2,3];
     4:      int y;
     5:      for (v in vs) v = 3;
                           ^
     6:      return 0;
     7:    }
   -------------------------------------------------

Cannot assign to function argument or loop identifier 'v'.

  $ ../../../../../install/default/bin/stanc assign_to_loop_var3.stan

Semantic error in 'assign_to_loop_var3.stan', line 6, columns 6-15:
   -------------------------------------------------
     4:      int vs[2, 3];
     5:      for (v in vs) {
     6:        v[1] = 0;
               ^
     7:        break;
     8:      }        
   -------------------------------------------------

Cannot assign to function argument or loop identifier 'v'.

  $ ../../../../../install/default/bin/stanc assign_to_loop_var4.stan

Semantic error in 'assign_to_loop_var4.stan', line 5, columns 6-12:
   -------------------------------------------------
     3:      vector[2] vs;
     4:      for (v in vs) {
     5:        v = 0;
               ^
     6:      }
     7:    }
   -------------------------------------------------

Cannot assign to function argument or loop identifier 'v'.

  $ ../../../../../install/default/bin/stanc assign_to_loop_var5.stan

Semantic error in 'assign_to_loop_var5.stan', line 5, columns 6-14:
   -------------------------------------------------
     3:      row_vector[2] vs;
     4:      for (v in vs) {
     5:        v = 3.2;
               ^
     6:      }
     7:    }
   -------------------------------------------------

Cannot assign to function argument or loop identifier 'v'.

  $ ../../../../../install/default/bin/stanc assign_to_loop_var6.stan

Semantic error in 'assign_to_loop_var6.stan', line 4, columns 4-12:
   -------------------------------------------------
     2:    vector[2] vs;
     3:    for (v in vs) {
     4:      v = 3.2;
             ^
     5:    }
     6:  }
   -------------------------------------------------

Cannot assign to function argument or loop identifier 'v'.

  $ ../../../../../install/default/bin/stanc assign_to_loop_var7.stan

Semantic error in 'assign_to_loop_var7.stan', line 4, columns 4-15:
   -------------------------------------------------
     2:    matrix[2, 2] vs;
     3:    for (v in vs) {
     4:      v[1] = 3.2;
             ^
     5:    }
     6:  }
   -------------------------------------------------

Only expressions of array, matrix, row_vector and vector type may be indexed. Instead, found type real.

  $ ../../../../../install/default/bin/stanc for_statements_bad_indices0.stan

Semantic error in 'for_statements_bad_indices0.stan', line 5, columns 20-28:
   -------------------------------------------------
     3:      while (1) {
     4:        int vs[2];
     5:        for (v in vs) v = 3.2;
                             ^
     6:      }
     7:      return 0;
   -------------------------------------------------

Cannot assign to function argument or loop identifier 'v'.

  $ ../../../../../install/default/bin/stanc for_statements_bad_indices1.stan

Semantic error in 'for_statements_bad_indices1.stan', line 5, columns 20-29:
   -------------------------------------------------
     3:      while (1) {
     4:        int vs[2];
     5:        for (v in vs) v[2] = 3;
                             ^
     6:      }
     7:      return 0;
   -------------------------------------------------

Only expressions of array, matrix, row_vector and vector type may be indexed. Instead, found type int.

  $ ../../../../../install/default/bin/stanc for_statements_bad_indices2.stan

Semantic error in 'for_statements_bad_indices2.stan', line 5, columns 20-26:
   -------------------------------------------------
     3:      while (1) {
     4:        int vs[2,3];
     5:        for (v in vs) v = 3;
                             ^
     6:      }
     7:      return 0;
   -------------------------------------------------

Cannot assign to function argument or loop identifier 'v'.

  $ ../../../../../install/default/bin/stanc for_statements_bad_indices3.stan

Semantic error in 'for_statements_bad_indices3.stan', line 5, columns 16-18:
   -------------------------------------------------
     3:      while (1) {
     4:        int xx = 3;
     5:        for (i in xx) continue;
                         ^
     6:      }
     7:      return 0;
   -------------------------------------------------

Foreach-loop must be over array, vector, row_vector or matrix. Instead found expression of type int.

  $ ../../../../../install/default/bin/stanc for_statements_bad_indices4.stan

Semantic error in 'for_statements_bad_indices4.stan', line 6, columns 18-19:
   -------------------------------------------------
     4:        matrix[2,3] vs;
     5:        for (v in vs) {
     6:          for (a in v) continue;
                           ^
     7:        }
     8:      }
   -------------------------------------------------

Foreach-loop must be over array, vector, row_vector or matrix. Instead found expression of type real.

